nullaway_error_4B54351E-D9AD-45C5-AD1F-1E6507B2E1D0.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/event/AbstractApplicationEventMulticaster.java:251: error: [NullAway] dereferenced expression filteredListeners is @Nullable
					filteredListeners.add(listener);
					                 ^
    (see http://t.uber.com/nullaway )
